2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/OgreResourceLoader.cpp: added more verbose logging
	* configure.ac: fixed silly incorrect media version
	* NEWS: updated with release info

2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* media/materials/scripts/environment.material: added reference to the sand texture

2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* configure.ac, make_dist_media.sh.in: updated media version

2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* ember.conf: use 0.5.0 media
	* make_dist_media.sh.in: fixed an error in getting the normal maps

2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* media/materials/base_scripts/base.material, media/materials/programs/OffsetMapping.cg, media/materials/scripts/vegetation.material: updated materials with some better offset mapping ones

2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* Ember.kdevelop: updated project file

2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/modeldefinitions/environment.modeldef.xml, src/components/ogre/modeldefinitions/items.modeldef.xml, src/components/ogre/modeldefinitions/modelmappings.modelmap.xml, src/components/ogre/modeldefinitions/tools.modeldef, src/components/ogre/modeldefinitions/trees.modeldef.xml: updated model definitions

2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/terrain.cfg: turn on vertex lightning even though it looks kinda strange (better than nothing)

2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* make_dist_media.sh.in: output more info and also get normal maps

2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* ember.conf: use jayrs sand texture

2007-07-23 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/scripting/bindings/lua/Widget.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp: updated bindings
